// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create and remove reaction: Respected 1`] = `
<button
  aria-label="Respected comment by Markus"
  aria-pressed={true}
  className="BaseButton-root Button-base Button-flat Button-active Button-fontSizeSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimarySemiBold Button-paddingSizeExtraSmall Button-colorPrimary ReactionButton-reacted CommentContainer-actionButton coral coral-reactButton coral-comment-reactButton CommentContainer-actionButton coral-reactedButton coral-comment-reactedButton ReactionButton-button"
  data-testid="comment-reaction-button"
  data-variant="flat"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  onTouchEnd={[Function]}
  type="button"
>
  <span
    className="Box-root Flex-root Flex-flex Flex-alignCenter"
  >
    <i
      aria-hidden="true"
      className="Icon-root Icon-sm coral coral-icon ReactionButton-icon coral coral-reactButton coral-comment-reactButton"
    >
      thumb_up
    </i>
    <span
      className="ReactionButton-totalReactions"
    >
      1
    </span>
  </span>
</button>
`;

exports[`create and remove reaction: Unrespected 1`] = `
<button
  aria-label="Respect comment by Markus"
  aria-pressed={false}
  className="BaseButton-root Button-base Button-flat Button-fontSizeSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimarySemiBold Button-paddingSizeExtraSmall Button-colorSecondary CommentContainer-actionButton coral coral-reactButton coral-comment-reactButton ReactionButton-button"
  data-testid="comment-reaction-button"
  data-variant="flat"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  onTouchEnd={[Function]}
  type="button"
>
  <span
    className="Box-root Flex-root Flex-flex Flex-alignCenter"
  >
    <i
      aria-hidden="true"
      className="Icon-root Icon-sm coral coral-icon ReactionButton-icon coral coral-reactButton coral-comment-reactButton"
    >
      thumb_up
    </i>
  </span>
</button>
`;
